--- a/TODO
+++ b/TODO
@@ -3,11 +3,11 @@ Add functionallity for weighed items
 Make sure user is logged in
 Write python scripts for data visulisations
 {
-    Top 5 barcodes with most spent on.
-    Top 5 Most bought barcodes
-    Total Amount spent in month
-    Total Amount spent through year
-    Graph with total spent from each month
-    Total Amount of items bought
-    Single largest expense
+    Top 5 barcodes with most spent on. Y
+    Top 5 Most bought barcodes Y
+    Total Amount spent in month Y
+    Total Amount spent through year Y
+    Graph with total spent from each month (Make multiple requests changing time) Y
+    Total Amount of items bought Y
+    Single largest expense Y
 }
